# stalkr

./: .gitignore  Cargo.toml  README.crates-io.md  README.md
assets/: pipeline-diagram.html
src/: api.rs  cli.rs  comment.rs  config.rs  fm.rs  gh.rs  git.rs  issue.rs  lib.rs  loc.rs  main.rs  mode.rs  prompt.rs  purge.rs  search.rs  stalk.rs  tag.rs  todo.rs  util.rs
