[package]
name = "stalkr"
version = "0.1.0"
edition = "2024"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
readme = "README.crates-io.md"
license = "MIT"
repository = "https://github.com/rakivo/stalkr"
keywords = ["todo", "cli", "code", "search", "tool"]
description = "Worker-based TODO manager in Rust"
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow         = { version = "=1.0.98",  default-features = false }
dir_rec        = { version = "=0.1.2",   default-features = false }
futures        = { version = "=0.3.31",  default-features = false }
libc           = { version = "=0.2.174", default-features = false }
memmap2        = { version = "=0.9.7",   default-features = false }
rayon          = { version = "=1.10.0",  default-features = false }
serde_json     = { version = "=1.0.141", default-features = false }
tokio-stream   = { version = "=0.1.17",  default-features = false }
dashmap        = { version = "=6.1.0",   default-features = false }
rustc-hash     = { version = "=2.1.1",   default-features = false }
bytecount      = { version = "=0.6.9",   default-features = false }
memchr         = { version = "=2.7.5",   default-features = false }
async-trait    = { version = "=0.1.88",  default-features = false }
mimalloc       = { version = "=0.1.47",  default-features = false, optional = true }
phf            = { version = "=0.12.1",  default-features = false, features = ["macros"] }
rand           = { version = "=0.9.2",   default-features = false, features = ["thread_rng"] }
clap           = { version = "=4.5.41",  default-features = false, features = ["std", "help", "derive"] }
tokio          = { version = "=1.46.1",  default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest        = { version = "=0.12.22", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = 'packed'
strip = "none"                    # don’t strip symbols
lto = false
overflow-checks = true

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false

# also: set RUSTFLAGS="-C force-frame-pointers=yes"
[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code
